some fix/add scrollbar

--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -37,6 +37,8 @@
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   height: 100%;
+  overflow-y: scroll;
+  max-height: 1150px;
   @include mobileXS(max-width, 100%);
 }
 
